<resources>
    <string name="app_name">NewEx</string>
    <string name="hotelName">"\n"
        "Отель \n"
        "Севастопольские края"</string>
    <string name="hotelPhone">+7(495)200-20</string>
    <string name="hotelAddress">Россия, Крым, Севастополь, улица Ефремова 38 </string>
    <string name="serdesc">SPA — это ода природе, гармонии и красоте. Ритуалы, тонизирующие тело и успокаивающие ум, очищают, расслабляют, помогают восстановить силы и душевный баланс.\n
    Программы ухода\n
Экспресс-уходы\n
Коррекция тела\n
Единение души и тела\n
Детские SPA программы (5-10 лет)\n
Подростковые программы (10-15 лет)\n
Уходы для лица</string>
    <string name="hotelInfo">«Севастопольские края» - единственный в Севастополе семейный парк-отель и пансионат с собственным пляжем и дендропарком! Из отеля, расположенного на берегу Черного моря, открывается живописный вид на музей-заповедник Херсонес Таврический (памятник ЮНЕСКО). Это 4 га вечнозеленого дендропарка, возраст некоторых хвойных деревьев которого - более 50 лет.
</string>
    <string name="servicetitle">СПА комплекс</string>
    <string name="roomTitle">Одноместный номер</string>
<string name="description">"В каждом номере отеля с собственной ванной комнатой установлены письменный стол и телевизор с плоским экраном. Предоставляются полотенца и постельное белье. Из некоторых номеров отеля «Покровка 6» открывается вид на город. Во всех номерах есть чайник. Также номера оснащены холодильником.\n" +
                "\n" +
                "От отеля до Дома-музея В. М. Васнецова — 3,3 км, а до Мавзолея В. И. Ленина — 3,4 км.\n" +
                "\n" +     "Это любимая часть города Москва среди наших гостей согласно независимым отзывам. Спорт и отдых\n" +
              "Экскурсия или презентация о местной культуре \n" +
               "Оплачивается отдельно\n" +
                "Интернет\n" +
               "Wi-Fi предоставляется на территории всего отеля бесплатно.\n" +
              "Парковка\n" +
              "Парковка отсутствует.\n" +
            "Стойка регистрации\n" +
             "Индивидуальная регистрация заезда/отъезда\n" +
             "Хранение багажа\n" +
            "Ускоренная регистрация заезда/отъезда\n" +
             "Круглосуточная стойка регистрации\n" +
                "Развлечения и семейные услуги\n" +
                "Детская площадка на улице\n" +
               "Услуги уборки\n" +
                "Ежедневная уборка"</string>
    <string name="desc">Уютный номер для размещения одного или двух человек. Площадь номера  14,5 м2 В комнате одна большая кровать, прикроватные тумбочки, обеденный стол, чайник, стулья, мини-бар, телефон, телевизор, шкаф-купе.
Комплимент от отеля - чай, сахар в номере. В ванной комнате: фен, ванна, туалет, бесплатные гигиенические принадлежности: мыло, шампунь, зубная щетка и паста, ватные палочки и диски, комплект полотенец, махровый халат и одна пара тапочек.
Все номера оборудованы кондиционерами. В каждом </string>
    <string name="text">Mughal Gardens which have truly changed the face of the Mughal Empire is one of the most popular and the most visited tourist attractions of Srinagar.</string>
</resources>