<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/transparent"
    android:foregroundTint="@color/q">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="406dp"
        android:layout_height="734dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/backToLK"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:backgroundTint="@android:color/transparent"
        android:foregroundTint="@color/q"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <TextView
            android:id="@+id/hotelname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_extra_bold"
            android:text="@string/hotelName"
            android:textAlignment="center"
            android:textColor="@color/q"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/hotelInfo"
            android:textAlignment="center"
            android:textColor="@color/q"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/hotelAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/q" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/hotelPhone"
            android:textAlignment="viewStart"
            android:textColor="@color/q" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>